force-app/main/default/objects/clofor_com_cfs__Discrepancy__c/clofor_com_cfs__Discrepancy__c.object-meta.xml
<CustomObject>
    <label>Discrepancy</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Discrepancy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discrepancy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>