force-app/main/default/objects/clofor_com_cfs__Discrepancy__c/fields/clofor_com_cfs__CargoID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cargo ID</label>
    <referenceTo>clofor_com_cfs__Cargo__c</referenceTo>
    <relationshipLabel>AUDIT DISCREPANCY</relationshipLabel>
    <relationshipName>Discrepancy</relationshipName>
    <type>Lookup</type>
</CustomField>