force-app/main/default/objects/clofor_com_cfs__Discrepancy__c/fields/clofor_com_cfs__CargoTroubleType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoTroubleType__c</fullName>
    <label>Cargo Trouble Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CargoOSDType</valueSetName>
    </valueSet>
</CustomField>