force-app/main/default/objects/clofor_com_cfs__Discrepancy__c/fields/clofor_com_cfs__DiscrepancyAdjustType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DiscrepancyAdjustType__c</fullName>
    <label>Discrepancy Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DiscrepancyAdjustType</valueSetName>
    </valueSet>
</CustomField>