force-app/main/default/objects/clofor_com_cfs__Discrepancy__c/fields/clofor_com_cfs__DiscrepancyQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DiscrepancyQuantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Discrepancy Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>