force-app/main/default/objects/clofor_com_cfs__Discrepancy__c/fields/clofor_com_cfs__WO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>W/O(Physical Inventory Check)</label>
    <referenceTo>clofor_com_cfs__WorkOrder__c</referenceTo>
    <relationshipLabel>DISCREPANCY</relationshipLabel>
    <relationshipName>DISCREPANCY</relationshipName>
    <type>Lookup</type>
</CustomField>