force-app/main/default/objects/clofor_com_cfs__Discrepancy__c/recordTypes/clofor_com_cfs__QualityDiscrepancy.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__QualityDiscrepancy</fullName>
    <active>true</active>
    <description>Discrepancy on quality such as damaged, wet, or expired.</description>
    <label>Quality Discrepancy</label>
</RecordType>