force-app/main/default/objects/clofor_com_cfs__Discrepancy__c/recordTypes/clofor_com_cfs__QuantityDiscrepancy.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__QuantityDiscrepancy</fullName>
    <active>true</active>
    <description>Quantity is shortage or overage.</description>
    <label>Quantity Discrepancy</label>
</RecordType>