force-app/main/default/objects/clofor_com_cfs__Discrepancy__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__AuditID__c</columns>
    <columns>clofor_com_cfs__CargoID__c</columns>
    <columns>clofor_com_cfs__DiscrepancyType_del__c</columns>
    <columns>clofor_com_cfs__CargoTroubleType__c</columns>
    <columns>clofor_com_cfs__DiscrepancyAdjustType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>